--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="https://www.instagram.com/jasper.calico/" target="_blank">Instagram</a>
         <a href="https://twitter.com/JasperTheCalico" target="_blank">Twitter</a>
         <a href="https://www.tiktok.com/@jasperthecalico" target="_blank">Tiktok</a>
-        <a href="https://www.twitch.tv/PrincessAww" target="_blank">Twitch</a>
+        <a href="https://www.twitch.tv/JasperCalico" target="_blank">Twitch</a>
         <a href="https://www.youtube.com/@JasperTheCalico-tl7wv" target="_blank">Youtube</a>
         <a href="https://photos.jasper.pink/gallery#kTSFIu61G8NTdLwcecVpN1KL" target="_blank">Jasper Art</a>
         <a href="https://photos.jasper.pink/gallery#8weG04Qy_0yJzbu-fH5uUB9I" target="_blank">Fursuit Photos</a>
